manifests/ingress/argocd-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: contour-internal
    cert-manager.io/cluster-issuer: lets-encrypt-production
    ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    projectcontour.io/websocket-routes: "/"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - argocd.subash.com
    secretName: argocd-https-secret-tls
  rules:
  - host: argocd.subash.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
